@@ -24,22 +24,21 @@ to B<ORAC::Group::CGS4> objects.
 
 # A package to describe a CGS4 group object for the
 # ORAC pipeline
- 
-use 5.004;
-use ORAC::Group::NDF;
- 
-# Let the object know that it is derived from ORAC::Frame;
-@ORAC::Group::CGS4::ISA = qw/ORAC::Group::NDF/;
+
+use 5.006;
+use strict;
+use warnings;
+
+use ORAC::Group::UKIRT;
+
+# inheritance
+use base qw/ ORAC::Group::UKIRT /;
 
 use vars qw/$VERSION/;
 
 '$Revision$ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
 
 
- 
-# standard error module and turn on strict
-use Carp;
-use strict;
 
 =head1 PUBLIC METHODS
 
@@ -112,7 +111,9 @@ Returns a hash containing the new keywords.
 sub calc_orac_headers {
   my $self = shift;
 
-  my %new = ();  # Hash containing the derived headers
+  # Run the base class first since that does the ORAC
+  # headers
+  my %new = $self->SUPER::calc_orac_headers;
 
   # ORACTIME
   # For IRCAM the keyword is simply RUTSTART
@@ -144,14 +145,13 @@ $Id$
 
 =head1 AUTHORS
 
-Tim Jenness (t.jenness@jach.hawaii.edu)
+Tim Jenness E<lt>t.jenness@jach.hawaii.eduE<gt>
 
 =head1 COPYRIGHT
 
-Copyright (C) 1998-2000 Particle Physics and Astronomy Research
+Copyright (C) 1998-2001 Particle Physics and Astronomy Research
 Council. All Rights Reserved.
 
 =cut
 
- 
 1;
