@@ -24,19 +24,21 @@ to B<ORAC::Group::UFTI> objects.
 
 # A package to describe a UKIRT group object for the
 # ORAC pipeline
- 
-use 5.004;
+
+use 5.006;
+use strict;
+use warnings;
 use vars qw/$VERSION/;
-use ORAC::Group::NDF;
- 
-# Let the object know that it is derived from ORAC::Frame;
-@ORAC::Group::UFTI::ISA = qw/ORAC::Group::NDF/;
+use ORAC::Group::UKIRT;
+
+# Set inheritance
+use base qw/ ORAC::Group::UKIRT /;
 
  '$Revision$ ' =~ /.*:\s(.*)\s\$/ && ($VERSION = $1);
- 
+
 # standard error module and turn on strict
 use Carp;
-use strict;
+
 
 =head1 PUBLIC METHODS
 
@@ -106,7 +108,9 @@ Returns a hash containing the new keywords.
 sub calc_orac_headers {
   my $self = shift;
 
-  my %new = ();  # Hash containing the derived headers
+  # Run the base class first since that does the ORAC_
+  # headers
+  my %new = $self->SUPER::calc_orac_headers;
 
   # ORACTIME
   # For UFTI the keyword is simply UTSTART
@@ -140,15 +144,14 @@ $Id$
 
 =head1 AUTHORS
 
-Frossie Economou (frossie@jach.hawaii.edu)
+Frossie Economou E<lt>frossie@jach.hawaii.eduE<gt>,
+Tim Jenness E<lt>t.jenness@jach.hawaii.eduE<gt>
 
 =head1 COPYRIGHT
 
-Copyright (C) 1998-2000 Particle Physics and Astronomy Research
+Copyright (C) 1998-2001 Particle Physics and Astronomy Research
 Council. All Rights Reserved.
-
 
 =cut
 
- 
 1;
