@@ -1,3 +1,9 @@
+2001-04-27  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Group/UFTI.pm (calc_orac_headers): Inherit from ORAC::Group::UKIRT
+
+	* Group/IRCAM.pm (calc_orac_headers): Inherit from ORAC::Group::UKIRT
+
 2001-04-25  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Group.pm: Add subgrp(s) with uhdr check
